k3s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2000m
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: calibre.ext4.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  number: 80
    - host: homepage.ext4.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
